implemented the 'vboxReclamations' interface